2006-11-29 14:26  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/gmeta6.Rd: print method

2006-11-08 09:29  rsbivand

	* DESCRIPTION, R/bin_link.R, R/vect_link.R, man/readRAST6.Rd,
	  man/readVECT6.Rd: NODATA

2006-09-21 21:46  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, man/gmeta6.Rd: R 2.4.0

2006-08-25 19:54  rsbivand

	* R/spgrass6.R, R/vect_link.R, man/readRAST6.Rd, man/readVECT6.Rd,
	  man/spgrass6.Rd: Windows touches

2006-08-25 12:04  rsbivand

	* DESCRIPTION, R/vect_link.R, inst/doc/spgrass6_0.3.pdf,
	  man/readVECT6.Rd: more changes

2006-08-24 21:31  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, R/vect_link.R,
	  man/gmeta6.Rd, man/putSites6sp.Rd, man/rast.get6.Rd,
	  man/readRAST6.Rd, man/readVECT6.Rd: vect upgrade

2006-08-22 21:31  rsbivand

	* DESCRIPTION, R/bin_link.R, R/spgrass6.R, man/gmeta6.Rd,
	  man/putSites6sp.Rd, man/rast.get6.Rd: added binary raster
	  transfer

2006-05-14 21:36  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/gmeta6.Rd, man/putSites6sp.Rd,
	  man/rast.get6.Rd: ignore.stderr fixes

2005-10-21 11:18  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/rast.get6.Rd, man/readCELL6sp.Rd:
	  simplify functions

2005-09-29 20:02  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/getSites6.Rd, man/gmeta6.Rd,
	  man/putSites6.Rd, man/putSites6sp.Rd, man/readCELL6.Rd,
	  man/readCELL6sp.Rd: fix for cygwin

2005-06-21 10:32  rsbivand

	* DESCRIPTION, man/getSites6.Rd, man/gmeta6.Rd, man/putSites6.Rd,
	  man/readCELL6.Rd: up to AttributeList

2005-05-27 09:25  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/readCELL6.Rd: removing GDAL
	  dependency

2005-05-17 19:36  rsbivand

	* DESCRIPTION: DESC

2005-05-07 22:05  rsbivand

	* R/spgrass6.R: spweb

2005-04-27 16:05  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/readCELL6.Rd: introduce sp
	  dependency

2005-04-25 11:19  rsbivand

	* DESCRIPTION, R/spgrass6.R, man/readCELL6.Rd: rasters

2005-04-07 10:17  rsbivand

	* R/spgrass6.R, man/readCELL6.Rd: merging changes

2005-03-11 11:13  rsbivand
