@@ -1,13 +1,13 @@
 Package: spgrass6
-Version: 0.3-4
-Date: 2006-11-28
+Version: 0.3-5
+Date: 2007-01-31
 Title: Interface between GRASS 6.0 geographical information system and R
 Author: Roger Bivand
 Maintainer: Roger Bivand <Roger.Bivand@nhh.no>
 Description: Interpreted interface between GRASS 6.0 geographical 
     information system and R, based on starting R from within the GRASS 
     environment.
-Depends: R (>= 2.1), sp (>= 0.8-3), maptools (>= 0.5-2), rgdal (>= 0.4-3)
+Depends: R (>= 2.2), sp (>= 0.8-3), maptools (>= 0.5-2), rgdal (>= 0.4-3)
 SystemRequirements: GRASS (>= 6.1)
 License: GPL version 2 or later.
 URL: http://r-spatial.sourceforge.net/, http://grass.itc.it/index.php
